# google-photos-organizer

./: .gitignore  .pylintrc  fake_token.json  pyproject.toml
google_photos_organizer/: chatgpt_example.py  main.py
google_photos_organizer/database/: __init__.py  db_manager.py  models.py
google_photos_organizer/models/: __init__.py
google_photos_organizer/utils/: __init__.py  auth.py  file_utils.py
tests/: conftest.py  test_file_utils.py  test_main.py
tests/integration_tests/: test_db_integration.py
tests/performance/: test_db_performance.py
tests/unit/: conftest.py  test_auth.py  test_db_manager.py  test_file_utils.py  test_photo_organizer.py
