[tool.poetry]
name = "google-photos-organizer"
version = "0.1.0"
description = ""
authors = ["jerome provensal <jeromegit@provensal.com>"]
readme = "README.md"
packages = [{include = "google_photos_organizer"}]

[tool.poetry.dependencies]
python = "^3.9"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.156.0"
pillow = "^11.0.0"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
