[tool.poetry]
name = "google-photos-organizer"
version = "0.1.0"
description = ""
authors = ["jerome provensal <jeromegit@provensal.com>"]
readme = "README.md"
packages = [{include = "google_photos_organizer"}]

[tool.poetry.dependencies]
python = "^3.9"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.156.0"
pillow = "^11.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-playwright = "^0.4.3"
hypothesis = "^6.75.3"
locust = "^2.15.1"
pylint = "^3.0.3"
pytest-benchmark = "4.0.0"
pytest-mock = "^3.14.0"
black = "^24.10.0"
autoflake = "^2.3.1"
isort = "^5.13.2"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=google_photos_organizer --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests"
]
